docs: add docs for Create Opening route
