# handler/response.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"net/http"
 
+	"github.com/Andrew-2609/go-opportunities/schema"
 	"github.com/gin-gonic/gin"
 )
 
@@ -25,4 +26,15 @@ func sendCreated(ctx *gin.Context, data any) {
 
 func sendNoContent(ctx *gin.Context) {
 	ctx.JSON(http.StatusNoContent, nil)
+}
+
+type ErrorResponse struct {
+	Error struct {
+		Msg  string `json:"message"`
+		Code int    `json:"code"`
+	} `json:"error"`
+}
+
+type CreateOpeningResponse struct {
+	schema.OpeningResponse
 }
